--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -7,6 +7,10 @@
 .logo {
     width: 80px;
 }
+nav {
+    display: flex;
+    justify-content: space-around;
+}
 nav a {
     text-align: center;
     background-color: #FECE46;
@@ -19,6 +23,37 @@ nav a:hover {
     color: white;
     text-decoration: underline;
 }
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    grid-template-rows: auto;
+    margin-top: -100px;
+}
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    z-index: 1;
+}
+#hero-msg h1, #hero-msg h4 {
+    text-align: center;
+    color: white;
+    margin-top: 100px;  
+}
+#hero-img {
+    width: 100%;
+}
+.button-box {
+    text-align: center;
+}
+.home-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+}
 .home-title {
     color: #057BA9;
     font-family: "Playball", "Bradley Hand", sans-serif;
@@ -27,16 +62,12 @@ nav a:hover {
 }
 #logo_link {
     padding-top: 5px;
+    justify-self: center;
+    align-self: center;
 }
 .icon {
     width: 80px;
     padding-top: 10px;
-}
-#hero-msg h1, #hero-msg h4 {
-    text-align: center;
-}
-.button-box {
-    text-align: center;
 }
 main section {
     text-align: center;
@@ -45,8 +76,9 @@ main section img {
     box-sizing: border-box;
 }
 #background {
-    height: 725px;
     background-color: #057BA9;
+    grid-column: 1/11;
+    grid-row: 4/9;
 }
 body {
     background-color: #6CA84E;
@@ -63,6 +95,8 @@ h2 {
 }
 header {
     background-color: rgba(20,30,13, .7);
+    display: grid;
+    grid-template-columns: 150px auto;
 }
 .book, .join {
     background-color: #067DAB;
@@ -80,14 +114,40 @@ header {
 }
 .card-img {
     border: 10px solid #067DAB;
+    width: 100%;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
 }
-.rivers-card, .camping-card, .rapids-card {
-    margin: 200px;
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
+}
+.mountains {
+    border: 10px solid #067DAB;
+    width: 100%;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+.rivers-card {
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+.camping-card {
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+.rapids-card {
+    grid-column: 8/10;
+    grid-row: 2/3;
 }
 .msg {
     background-color: #067DAB;
     line-height: 1.5em;
     padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #6f7364;
 }
 .msg h2 {
     color: white;
@@ -102,6 +162,9 @@ footer {
     color: white;
     padding: 25px 50px;
     margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 footer p {
     font-size: 1.2em;
@@ -119,4 +182,47 @@ footer a:hover {
 }
 footer .social img {
     padding-top: 15px;
+}
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    #hero-msg h1 {
+        color: #6f7364;
+    }
+    .home-title {
+        font-size: 25px;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
 }
