--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -183,6 +183,18 @@ footer a:hover {
 footer .social img {
     padding-top: 15px;
 }
+#feedback {
+    background-color: antiquewhite;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    padding: .5em;
+    display: none;
+}
+.moveDown {
+    margin-top: 3em;
+}
 /*#river-hero {
     display: grid;
 }*
